@@ -1,3 +1,8 @@
+*** 20010613_2 by db
+- stats r/g should be oper only
+
+
+
 *** 20010613_1 by db
 - added user mode O removed channel mode d
 
